Configurando o site para telas com largura maxima de 480px, para que não fique quebrado o site no modo mobile.

--- a/style.css
+++ b/style.css
@@ -153,6 +153,18 @@ footer {
         --bg-url: url(assets/bg-desktop-light.jpg);
     }
 }
+
+@media (max-width:480px) {
+    body {
+        height: 100%;
+        width: 100%;
+    }
+
+    #container {
+        height: 100%;
+        width: 100%;
+    }
+}
 /*animation*/
 @keyframes slide-in {
     from {
